--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,9 +2,76 @@ body {
     background-color: #b11a21;
     color: white;
 }
+
 h1, h2 {
     color: #d68d8d;
 }
+
 button {
     color: #870404;
+}
+
+.cocktail-cocktailLanding-container {
+    display: grid;
+    justify-content: center;
+    gap: 5px;
+}
+
+.cocktail-cocktailDetails-container {
+    display: grid;
+    justify-content: center;
+    gap: 5px;
+}
+
+.cocktail-details-info-container {
+    display: grid;
+
+}
+
+.cocktail-details-recipe-container {
+    display: grid;
+    grid-template-columns: repeat(2, 15rem);
+
+}
+
+.cocktail-details-ingredients-list-container {
+    border: aliceblue solid 1px;
+    justify-items: center;
+    padding: 5px;
+
+}
+
+.cocktail-details-measurements-list-container {
+    border: aliceblue solid 1px;
+    justify-items: center;
+    padding: 5px;
+}
+
+.cocktail-cocktailSearch-container {
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+    gap: 10px;
+    padding: 10px;
+
+}
+
+.cocktail-search-searchbar {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 10px;
+}
+
+.cocktail-search-buttons {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 5px;
+}
+
+.cocktail-search-similar-cocktails-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-flow: row;
+    gap: 20px;
+    padding: 10px;
 }
